updated vm mark as new label, updated transcript label when not enabled, made default state of vm-to-text setting checked, made width of ringtone drop downs wider on settings screen, changed residential button style to match commercial button style, changed hover color of list items, changed expanded background color of list items, fixed horizontal alignment of vm icons, made ringtone drop down on edit contacts screen wider,

--- a/css/layout.css
+++ b/css/layout.css
@@ -549,3 +549,13 @@
 .commercial .sms-conversation-new-frame .frame-footer.new-message .send-button{
 	right:0;
 }
+
+/**** Settings ****/
+
+.settings-frame .select-menu.ringtone{
+	width:175px;
+}
+
+.settings-frame .select-menu.ringtone .options{
+	max-height:83px;
+}
